--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -4,16 +4,28 @@ security:
     # https://symfony.com/doc/current/security.html#c-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+        App\Entity\Utilisateur:
+            algorithm: auto
+
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        users_in_memory: { memory: null }
+        # used to reload user from session & other features (e.g. switch_user)
+        app_user_provider:
+            entity:
+                class: App\Entity\Utilisateur
+                property: username
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             lazy: true
-            provider: users_in_memory
+            provider: app_user_provider
+            custom_authenticator: App\Security\LogInFormAuthenticator
+            logout:
+                path: app_logout
+                # where to redirect after logout
+                target: home
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
@@ -24,5 +36,11 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/logout, roles: ROLE_USER }
+
+        # permet de rendre la route /new accessible pour les utilisateurs anonymes (non connecté)
+        - { path: ^/utilisateur/new, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+
+        # bloque toutes les routes commençant par /utilisateur sauf la ligne du dessus
+        - { path: ^/utilisateur, roles: ROLE_USER }
+        - { path: ^/membre, roles: IS_AUTHENTICATED_FULLY }
